2013-09-02  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Claus-Justus Heine:
	bug #38713: Compilation of the documentation breaks with texinfo-5
	* doc/avrdude.texi: Turn @itemx into @item, add @headitem to STK600
	Routing/Socket card table

2013-09-02  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* usbasp.c: Add trace output for -vvv to non-TPI functions, too.

2013-09-01  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* usbasp.c (usbasp_tpi_paged_load): Calculate correct
	buffer address.
	* usbasp.c (usbasp_tpi_paged_write): Calculate correct
	buffer address; don't issue a SECTION_ERASE command for
	each page (a CHIP_ERASE has been done before anyway);
	remove the code that attempted to handle partial page
	writes, as all writes are now done with a full page.

2013-09-01  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* usbasp.c: Add more trace output, by now only for the TPI
	functions.

2013-08-31  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* usbasp.c (usbasp_transmit): Add -vvvv trace output.

2013-08-30  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #39893: Verification failure with AVRISPmkII and Xmega
	* stk500v2.c (stk600_xprog_page_erase): Fix argument that is
	passed to stk600_xprog_memtype()

2013-07-11  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* fileio.c (elf2b): replace elf_getshstrndx() by
	elf_getshdrstrndx() as the former one is deprecated

2013-06-19  Rene Liebscher <R.Liebscher@gmx.de>

	use bitbanging on ftdi mpsse when wrong pins are used
	* avrftdi.c, avrftdi_private.h: added additional pin check 
	and bitbanging fallback
	* pindefs.[ch]: added a flag to enable/disable output
	* ft245r.c: changes because of added flag above

2013-05-17  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by "Malte" and John McCorquodale:
	patch #7876 JTAGICE mkII fails to connect to attiny if debugwire
	is enabled AND target has a very slow clock
	* jtagmkII.c (jtagmkII_getsync): When leaving debugWIRE mode
	temporarily, immediately retry with ISP, rather than leaving.